@@ -12,6 +12,7 @@
   * priority support for demuxer and input plugins
   * smoother seeking
   * fix seeking with the qt dll decoder
+  * support AAC audio in AVI
 
 xine-lib (1-rc4a)
   * audio out now uses a more user friendly "Speaker arrangement" config item;
